20071203 sound/alsasound.c: increase NUM_FRAMES to avoid buffer underruns
	 (Stuart).
20071203 sound/alsasound.c: set avail_min to 1/2 of period_size and fix
	 reading of ALSA options (fixes bug #1750603) (Gergely Szasz).
20071203 if1.c: rename IN and WP to MDR_IN and MDR_WP (avoids warnings
	 under Win32) (Stuart).
20071203 input.c,ui/sdl/sdlui.c: pause emulation while displaying the exit
	 dialog (Stuart).
20071203 ui/win32,ui/win32/{Makefile.am,icons}: ignore generated files and
	 distribute icons directory (Stuart).
20071203 ui/win32/win32ui.c: implement pausing (Stuart).
20071204 disk/plusd.c: use MEMORY_PAGE_SIZE define (Fred).
20071204 disk/beta.[ch]: remove unused function (Stuart).
20071204 disk/beta.[ch],machines/{pentagon.c,pentagon1024.c,pentagon512.c,
	 scorpion.c,spec128.c,specplus2.c},periph.[ch],settings.dat,
	 ui/options.dat,ui.c: allow the Beta 128 interface to be used with the
	 128K and +2 machines (feature request #1541506) (Stuart).
20071204 man/fuse.1: document the 128K/+2 Beta 128 support (Stuart).
20071204 man/fuse.1: rearrange Interface I TODO items (Stuart).
20071204 man/fuse.1: mention +D and 128K/+2 Beta 128 support in the "Media,
	 Disk" section (Stuart).
20071205 machines/{specplus2a.c,specplus3.c}: Interface 1 doesn't work on the
         +2A and +3 (Fred).
20071205 menu.[ch],menu_data.dat,settings.pl,ui/{gtk/roms.c,win32/win32ui.c},
	 widget/{menu.c,roms.c,widget_internals.h}: use more appropriate titles
	 when selecting Interface I and +D ROMs (Stuart).
20071205 menu.c,menu_data.dat,settings.pl: allow the Beta 128 ROM to be
	 customised (Stuart).
20071205 menu_data.dat: fix Beta 128 ROM menu item name (Stuart).
20071205 if1.c: add support for Interface 1 snapshots (Fred).
20071205 menu.c,menu_data.dat,settings.pl: rearrange ROMs (Stuart).
20071206 spectrum.c: update comment to reflect added RAM (Stuart).
20071207 disk/disk.c: initialise 'seclen' in open_td0() (Stuart).